@@ -1,20 +1,25 @@
 #!/usr/bin/make -f
-include /usr/share/cdbs/1/rules/debhelper.mk
 
 POD2MAN=pod2man --center "Debian PostgreSQL infrastructure" -r "Debian"
 POD1PROGS=pg_wrapper pg_lsclusters pg_buildext
 POD8PROGS=pg_ctlcluster pg_createcluster pg_dropcluster pg_upgradecluster pg_updatedicts
 
-DEB_DH_INSTALLINIT_ARGS := --name=postgresql -u'defaults 19 21' -r
-DEB_DH_GENCONTROL_ARGS := -- -Vserver-dev-all-depends="$(shell for v in `debian/supported-versions`; do echo "postgresql-server-dev-$$v,"; done)"
+%:
+	dh "$@"
 
-common-post-build-indep::
+override_dh_install:
+	dh_install
+	install -m 644 -D debian/postgresql-common.sysctl debian/postgresql-common/etc/sysctl.d/30-postgresql-shm.conf
 	for p in $(POD1PROGS); do $(POD2MAN) --quotes=none --section 1 $$p > $$p.1; done
 	for p in $(POD8PROGS); do $(POD2MAN) --quotes=none --section 8 $$p > $$p.8; done
 
-install/postgresql-common::
-	install -m 644 -D debian/postgresql-common.sysctl debian/postgresql-common/etc/sysctl.d/30-postgresql-shm.conf
+override_dh_installinit:
+	dh_installinit --name=postgresql -u'defaults 19 21' -r
 
-clean::
+override_dh_gencontrol:
+	dh_gencontrol -- -Vserver-dev-all-depends="$(shell for v in `debian/supported-versions`; do echo "postgresql-server-dev-$$v,"; done)"
+
+override_dh_clean:
+	dh_clean
 	for p in $(POD1PROGS); do rm -f $$p.1; done
 	for p in $(POD8PROGS); do rm -f $$p.8; done
